idempotence_hw/k8s/deployment_order.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  labels:
    app: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      name: order-service
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
#          image: ogara/otus-microservice:idempotence-arm
          image: ogara/otus-microservice:idempotence-amd
          ports:
            - name: web
              containerPort: 8000

---

apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
  type: ClusterIP
